trunk/Archive2/47/f89eccb2cd2e0c/output
main.cpp:21:6: error: conflicting declaration 'auto sec'
 auto sec = std::chrono::seconds(1);
      ^
main.cpp:9:6: note: previous declaration as 'std::chrono::duration<long int> sec'
 auto sec = std::chrono::seconds(1);
      ^
